@@ -4,7 +4,7 @@ Dist::Zilla::Plugin::Bootstrap::ShareDir::Module - Use a `share` directory on yo
 
 # VERSION
 
-version 0.1.1
+version 0.1.2
 
 {
     "namespace":"Dist::Zilla::Plugin::Bootstrap::ShareDir::Module",
