@@ -7,20 +7,26 @@ use Path::Tiny;
 use Cwd qw( cwd );
 use File::Copy::Recursive qw( rcopy );
 
-my $source  = find_dev('./')->child('corpus')->child('fake_dist_04');
+my $dist    = 'fake_dist_04';
+my $source  = find_dev('./')->child('corpus')->child($dist);
 my $tempdir = Path::Tiny->tempdir;
 
 rcopy( "$source", "$tempdir" );
 
 BAIL_OUT("test setup failed to copy to tempdir") if not -e -f $tempdir->child("dist.ini");
 
-my $cwd = cwd();
-chdir "$tempdir";
-diag "You can ignore the warning about dzil authordeps here";
+use Test::Fatal;
+use Test::DZil;
 
-isnt( system( "dzil", "build" ), 0, "dzil building a no-fallback dist that isnt installed fails" );
+isnt(
+  exception {
 
-chdir $cwd;
+    Builder->from_config( { dist_root => "$tempdir" } )->build;
+
+  },
+  undef,
+  "dzil build ran ok"
+);
 
 done_testing;
 
